ver 0.21.25 (not yet released)
* protocol:
  - fix crash when using "rangeid" while playing
* input
  - file: detect premature end of file
  - smbclient: don't send credentials to MPD clients

ver 0.21.24 (2020/06/10)
* protocol
  - "tagtypes" requires no permissions
* database
  - simple: fix crash when mounting twice
* decoder
  - modplug: fix Windows build failure
  - wildmidi: attempt to detect WildMidi using pkg-config
  - wildmidi: fix Windows build failure
* player
  - don't restart current song if seeking beyond end
* Android
  - enable the decoder plugins GME, ModPlug and WildMidi
  - fix build failure with Android NDK r21
* Windows
  - fix stream playback
  - enable the decoder plugins GME, ModPlug and WildMidi
  - work around Meson bug breaking the Windows build with GCC 10
* fix unit test failure

ver 0.21.23 (2020/04/23)
* protocol
  - add tag fallback for AlbumSort
* storage
  - curl: fix corrupt "href" values in the presence of XML entities
  - curl: unescape "href" values
* input
  - nfs: fix crash bug
  - nfs: fix freeze bug on reconnect
* decoder
  - gme: adapt to API change in the upcoming version 0.7.0
* output
  - alsa: implement channel mapping for 5.0 and 7.0
* player
  - drain outputs at end of song in "single" mode
* Windows
  - fix case insensitive search

ver 0.21.22 (2020/04/02)
* database
  - simple: optimize startup
* input
  - curl: fix streaming errors on Android
* playlist
  - rss: support MIME type application/xml
* mixer
  - android: new mixer plugin for "sles" output
* Android
  - TV support
* Windows
  - fix time zone offset check
* fix build failures with uClibc-ng

ver 0.21.21 (2020/03/19)
* configuration
  - fix bug in "metadata_to_use" setting
* playlist
  - asx, xspf: fix corrupt tags in the presence of XML entities
* archive
  - iso9660: skip empty file names to work around libcdio bug
* decoder
  - gme: ignore empty tags
* output
  - solaris: port to NetBSD
* raise default "max_connections" value to 100
