@@ -4,6 +4,8 @@ ver 0.21.25 (not yet released)
 * input
   - file: detect premature end of file
   - smbclient: don't send credentials to MPD clients
+* Windows/Android:
+  - fix Boost detection after breaking change in Meson 0.54
 
 ver 0.21.24 (2020/06/10)
 * protocol
